# EV_Efficacity_2025

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  stats_can.h5
data/: DigitizeGraph.m  license.txt  public end density.xlsx  public start density.xlsx  residential end dentity.xlsx  residential start density.xlsx  start Time residential.txt
data/matplot/: ADR1.axis  ADR2.axis  Main.m  calibration_last.axis  xyratio eq 1 - 1.axis
data/matplot/functions/: Acquire_Data_a.m  Acquire_Data_m.m  Calibrate_Axis.m  Clear_Data.m  Control.m  Cubic_Spline.m  Display_Image.m  Display_Image2.m  Get_Crop_Position.m  Get_Input.m  Get_Mouse_Location.m  Initializer.m  Mark_Cursor.m  Mark_Data.m  Mark_Pixel.m  Open_Image.m  Read_Matrix.m  View_Sort_Data.m  Write_Matrix.m  m_loc2pixel.m
src/: aggregate_power.py  carDistribution.py  carEfficiency.py  carRecharge.py  carRechargeUsage.py  carUsage.py  data_prep_canada.py  data_prep_electric.py  main.py  merger.py  stats_can.h5
src/data/raw/: 026e45b4-eb63-451f-b34f-d9308ea3a3d9.json  8812228b-a6aa-4303-b3d0-66489225120d.json
src/ev_simulation.egg-info/: PKG-INFO  SOURCES.txt
src/gui/: app.py  appHelper.py  stats_can.h5
src/util/: calculator.py  calendar.py  calendar_utils.py  normalizer.py
tests/: generate_ieee_results.ipynb  import_test.ipynb  table21.xls  test_aggregate_power.py  test_calendar.py  test_data_prep.py  test_new_features.py  test_quebec_energy.py
tests/ieee_results/: summary.csv  weekly_profile.csv
