[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-simulation"
version = "0.0.1"
description = "Simulation de la charge des véhicules électriques"
requires-python = ">=3.11"

[tool.setuptools]                 # ← ici on indique où se trouve le code
package-dir = {"" = "src"}        # racine du package = dossier src/

[tool.setuptools.packages.find]   # découverte automatique
where = ["src"]
